[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sound/bgmusic.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Start/Starts_btn.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Images/background/frame_0_delay-s.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 3
border_width_top = 10
border_width_right = 10
border_width_bottom = 2
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 20
use_filter = true
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0705882, 0.407843, 0.576471, 1 )
border_width_left = 2
border_width_top = 8
border_width_right = 8
border_width_bottom = 1
border_color = Color( 0.0470588, 0.129412, 0.172549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Start" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -58.0
margin_right = 132.5
margin_bottom = 58.0

[node name="Custom2D_btn" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_right = 265.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Custom 2D"
script = ExtResource( 2 )

[node name="Animation_btn" type="Button" parent="CanvasLayer2/VBoxContainer"]
margin_top = 60.0
margin_right = 265.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Animation"
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer2"]
margin_left = 39.0
margin_top = 707.0
margin_right = 124.0
margin_bottom = 755.0

[node name="Back_btn" type="Button" parent="CanvasLayer2/VBoxContainer2"]
margin_right = 85.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Back"
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[connection signal="pressed" from="CanvasLayer2/VBoxContainer/Custom2D_btn" to="CanvasLayer2/VBoxContainer/Custom2D_btn" method="_on_Custom2D_btn_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer/Animation_btn" to="CanvasLayer2/VBoxContainer/Animation_btn" method="_on_Animation_btn_pressed"]
[connection signal="pressed" from="CanvasLayer2/VBoxContainer2/Back_btn" to="CanvasLayer2/VBoxContainer2/Back_btn" method="_on_Back_btn_pressed"]
